Fixed error when no results are found, modified styles to increase contrast for eink devices

--- a/public/css/display.css
+++ b/public/css/display.css
@@ -8,7 +8,8 @@ body {
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #f5f5f5;
+    background-color: #fff;
+    color: #000;
 }
 
 main {
@@ -21,10 +22,27 @@ main .form-control {
     position: relative;
     box-sizing: border-box;
     height: auto;
-    padding: 10px;
-    font-size: 16px;
+    /*font-size: 16px;*/
+    border: solid 1px #000;
 }
 
 main .form-control:focus {
     z-index: 2;
+}
+
+.input-group>.form-control {
+    width: 100%;
+}
+
+.list-group-item {
+    border: solid 1px #000;
+}
+
+.list-group-item-action {
+    color: #000;
+}
+
+.btn-primary,
+.btn-secondary {
+    background-color: #000;
 }
